# aura-os

./: .env.example  .gitignore  Cargo.toml  README.md  package.json  test.md
apps/aura-os-desktop/: Cargo.toml  build.rs
apps/aura-os-desktop/assets/installer/: installer.tera.nsi
apps/aura-os-desktop/src/: events.rs  handlers.rs  main.rs  release_version.rs
apps/aura-os-desktop/src/computer_use/: abort_hotkey.rs  accessibility.rs  input.rs  mod.rs  screenshot.rs
apps/aura-os-desktop/src/demo/: mod.rs  preflight.rs  recorder.rs  tools.rs
apps/aura-os-desktop/src/harness/: binary.rs  sidecar.rs
apps/aura-os-desktop/src/init/: cli.rs  env.rs  fatal_dialog.rs  logging.rs  mod.rs  paths.rs
apps/aura-os-desktop/src/net/: server.rs
apps/aura-os-desktop/src/ui/: chrome.rs  demo_session.rs  main_window.rs  mod.rs  runtime.rs
apps/aura-os-desktop/src/updater/: bundle_path.rs  check.rs  diagnostics.rs  endpoint.rs  install.rs  mod.rs  reconcile.rs
apps/aura-os-server/: Cargo.toml
apps/aura-os-server/src/: billing_bridge.rs  bug_report_store.rs  capture_auth.rs  dto.rs  event_log.rs  lib.rs  live_streams.rs  log_throttle.rs  loop_events_bridge.rs  main.rs  mixpanel.rs  network_bridge.rs  orbit_guard.rs  persistence.rs  process_automaton.rs  reconciler.rs  stability_metrics.rs  workspace_index.rs
apps/aura-os-server/src/app_builder/: harness_autospawn.rs  mod.rs  services.rs
apps/aura-os-server/src/auth_guard/: mod.rs  session_resolve.rs  tests.rs  token.rs
apps/aura-os-server/src/channels/: dispatcher.rs  mod.rs
apps/aura-os-server/src/error/: mod.rs
apps/aura-os-server/src/handlers/: admin.rs  agent_bootstrap.rs  appearance.rs  auth.rs  billing.rs  desktop_preferences.rs  dev_loop.rs  files.rs  marketplace.rs  mod.rs  permissions.rs  plan_mode.rs  project_artifacts.rs  projects.rs  public_models.rs  streams.rs  swarm.rs  task_decompose.rs  tasks.rs  trusted_mcp.rs  upload.rs  users.rs  ws.rs
apps/aura-os-server/src/lib/: handlers_test_support.rs  phase7_test_support.rs
apps/aura-os-server/src/loop_log/: mod.rs  read.rs  write.rs
apps/aura-os-server/src/reconciler/: wire.rs
apps/aura-os-server/src/router/: agents.rs  appearance.rs  auth.rs  bug_reports.rs  channels.rs  debug_loops.rs  mod.rs  notes.rs  preferences.rs  process_generation.rs  projects_files.rs  public.rs  runtime.rs  specs.rs  streams.rs  tasks.rs  users_orgs_billing.rs
apps/aura-os-server/src/state/: auth_extractors.rs  caches.rs  mod.rs  tests.rs
apps/aura-os-server/tests/: admin_health.rs  agent_context_usage_test.rs  agent_update_ceo_test.rs  concurrent_agents.rs  concurrent_agents_stress_test.rs  concurrent_sessions.rs  cross_agent_reply_callback_test.rs  delete_account_test.rs  executor_janitor_test.rs  harness_client_test.rs  public_handlers_test.rs  session_delete_test.rs  session_list_empty_filter_test.rs  session_rotation_test.rs  sessions_events_isolation.rs  single_task_retry_request_id_golden.rs
apps/aura-os-server/tests/agent_create_test/: create_local.rs  main.rs  mocks.rs  remote_only.rs  serde_contract.rs
apps/aura-os-server/tests/api_tests/: integration_actions.rs  integration_provider_mock.rs  integration_setup.rs  integrations.rs  loop_adopt_shortcut.rs  loop_stop.rs  main.rs  specs.rs  tasks.rs
apps/aura-os-server/tests/autonomous_recovery_replay/: bundle.rs  classifiers.rs  gates.rs  main.rs
apps/aura-os-server/tests/chat_events_test/: history.rs  sessions.rs  streaming.rs  tools.rs
apps/aura-os-server/tests/common/: mod.rs
apps/aura-os-server/tests/dev_loop_dod_regression/: completion.rs  main.rs  retry.rs
apps/aura-os-server/tests/feedback_api_tests/: bug_reports.rs  create.rs  main.rs  mock.rs  pub_list.rs
apps/aura-os-server/tests/harness_proxy_test/: mocks.rs  proxy_forwards.rs  skills_create.rs
apps/aura-os-server/tests/storage_integration_test/: agents.rs  e2e.rs  sessions.rs  tasks.rs
apps/aura-run-analyze/: Cargo.toml
crates/aura-loop-log-schema/: Cargo.toml
crates/aura-loop-log-schema/src/: lib.rs
crates/aura-os-agents/: Cargo.toml
crates/aura-os-agents/src/: convert.rs  instance.rs  merge.rs
crates/aura-os-agents/src/instance/: tests.rs
crates/aura-os-agents/src/service/: mod.rs  permissions.rs  shadow.rs  (+1 more)
crates/aura-os-auth/: Cargo.toml
crates/aura-os-auth/src/: lib.rs
crates/aura-os-automation/: Cargo.toml
crates/aura-os-automation/src/: error.rs  event_kinds.rs  lib.rs
crates/aura-os-billing/: Cargo.toml
crates/aura-os-billing/src/: testutil.rs
crates/aura-os-browser/: Cargo.toml
crates/aura-os-channels/: Cargo.toml
crates/aura-os-channels/src/: connector.rs  dispatcher.rs  error.rs  inbound.rs  kind.rs  lib.rs  records.rs  runtime.rs  service.rs  telegram.rs
crates/aura-os-core/: Cargo.toml
crates/aura-os-core/src/: channel.rs  enums.rs  harness_id.rs  lib.rs  permissions.rs  testutil.rs
crates/aura-os-core/tests/: round_trips.rs
crates/aura-os-events/: Cargo.toml
crates/aura-os-harness/: Cargo.toml
crates/aura-os-harness/src/: client.rs  error.rs  event_normalization.rs  harness.rs  harness_url.rs  lib.rs  local_harness.rs  session.rs  signals.rs  stability_metrics.rs  swarm_harness.rs  test_support.rs  ws_bridge.rs  ws_reader_handle.rs
crates/aura-os-integrations/: Cargo.toml
crates/aura-os-integrations/src/: client.rs  error.rs
crates/aura-os-loops/: Cargo.toml
crates/aura-os-loops/src/: registry.rs
crates/aura-os-network/: Cargo.toml
crates/aura-os-orgs/: Cargo.toml
crates/aura-os-projects/: Cargo.toml
crates/aura-os-sessions/: Cargo.toml
crates/aura-os-sessions/src/: lib.rs  params.rs  session_service.rs
crates/aura-os-sessions/tests/: auto_fork_chat.rs  context_rollover.rs
crates/aura-os-storage/: Cargo.toml
crates/aura-os-storage/src/: conversions.rs  lib.rs
crates/aura-os-store/: Cargo.toml
crates/aura-os-store/src/: store.rs
crates/aura-os-store/tests/: integration.rs
crates/aura-os-tasks/: Cargo.toml
crates/aura-os-tasks/src/: task_service.rs  transition.rs
crates/aura-os-tasks/tests/: state_machine.rs
crates/aura-run-heuristics/: Cargo.toml
(+1795 files in other folders)
