[workspace]
members = [
    "crates/aura-os-agents",
    "crates/aura-os-auth",
    "crates/aura-os-billing",
    "crates/aura-os-browser",
    "crates/aura-os-core",
    "crates/aura-os-events",
    "crates/aura-os-integrations",
    "crates/aura-os-harness",
    "crates/aura-os-loops",
    "crates/aura-os-network",
    "crates/aura-os-orgs",
    "crates/aura-os-projects",
    "crates/aura-os-sessions",
    "crates/aura-os-storage",
    "crates/aura-os-store",
    "crates/aura-os-tasks",
    "crates/aura-os-terminal",
    "crates/aura-protocol",
    "crates/aura-loop-log-schema",
    "crates/aura-run-heuristics",
    "apps/aura-os-desktop",
    "apps/aura-os-server",
    "apps/aura-os-ide",
    "apps/aura-run-analyze",
]
# vendor/chromiumoxide is a pinned fork of chromiumoxide v0.9.1 carrying
# aura-os-local patches (see [patch.crates-io] below). It declares its own
# `[workspace]`, so we exclude it here to keep it out of our build graph.
exclude = ["vendor/chromiumoxide"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"
license = "MIT"
repository = "https://github.com/aura/aura-os"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = "warn"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async helpers
async-trait = "0.1"
futures-util = "0.3"

# Time / IDs
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Encoding
bytes = "1"
base64 = "0.22"
hex = "0.4"
blake3 = "1.5"

# Misc utilities
url = { version = "2", features = ["serde"] }
dashmap = "6"
dirs = "5"
tempfile = "3"

[profile.dev]
debug = 0

[profile.test]
debug = 0

# Pin `chromiumoxide` and its subcrates to our local fork under
# `vendor/chromiumoxide`. The fork starts from the upstream v0.9.1 tag and
# adds:
# - a diagnostic patch that includes the raw JSON payload in the
#   `WS Invalid message` log line, so we can identify which CDP event or
#   response is failing to deserialize against the generated schemas.
# - (planned) targeted `#[serde(rename = "...")]` additions for specific
#   CDP structs whose field names have diverged from what current Chrome
#   sends on the wire.
[patch.crates-io]
chromiumoxide = { path = "vendor/chromiumoxide" }
chromiumoxide_cdp = { path = "vendor/chromiumoxide/chromiumoxide_cdp" }
chromiumoxide_pdl = { path = "vendor/chromiumoxide/chromiumoxide_pdl" }
chromiumoxide_types = { path = "vendor/chromiumoxide/chromiumoxide_types" }
