[package]
name = "aura-os-desktop"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aura-os-core = { path = "../../crates/aura-os-core", default-features = false }
aura-os-server = { path = "../aura-os-server", default-features = false, features = ["browser-cdp"] }
aura-os-ide = { path = "../aura-os-ide" }
aura-os-store = { path = "../../crates/aura-os-store" }
aura-os-integrations = { path = "../../crates/aura-os-integrations" }
axum = { workspace = true }
base64 = { workspace = true }
wry = "0.54"
tao = "0.34"
tokio = { workspace = true }
dirs = { workspace = true }
dotenvy = "0.15"
image = "0.25.10"
rfd = "0.15.1"
open = "5"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
cargo-packager-updater = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Graphics_Dwm", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_UI_HiDpi", "Win32_UI_Shell", "Win32_Foundation", "Win32_System_Diagnostics_Debug", "Win32_System_Kernel", "Win32_System_Threading", "Win32_Security"] }

# Embeds an `RT_GROUP_ICON` (and matching version info) into the produced
# `aura-os-desktop.exe` so the Start Menu, File Explorer, "pin to taskbar"
# tile, and Alt+Tab fallback all show the AURA orb. Without this, those
# surfaces fall back to the generic Windows executable glyph because they
# read the icon from disk, not from the runtime `with_window_icon` HICON.
[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
muda = "0.15"
# Used by `updater::bundle_path` to inspect the running .app bundle's
# filesystem flags (MNT_RDONLY) so we can detect App Translocation /
# read-only DMG mounts before `cargo-packager-updater` fails mid-install
# with `Read-only file system (os error 30)`.
libc = "0.2"

[features]
default = ["dev-channel"]
# Build-time channel selector. `dev-channel` is the default so plain
# `cargo run -p aura-os-desktop` (and any other unqualified cargo invocation)
# produces a Dev binary with parallel-but-distinct identifiers (window
# title "AURA Dev", `aura-dev` data dir, dev ports, dev single-instance
# mutex, dev skills tree, in-app updater disabled). This lets a developer
# run a dev build alongside an installed stable AURA without either
# stomping on the other's files, ports, or single-instance lock.
#
# Stable (published-installer) binaries are produced exclusively by the
# release pipeline, which passes the explicit
# `--no-default-features --features stable-channel` flag in every place
# that builds for distribution:
#   - `scripts/ci/verify-desktop.mjs`
#   - `.github/workflows/release-stable.yml`
#   - `.github/workflows/release-nightly.yml`
#   - the `before-packaging-command` line below (used by `cargo packager`)
# Forgetting that flag is a release bug, not a default-features safety
# net — the channel is baked in at compile time, so producing the wrong
# kind of binary is loud (different title, different data dir) rather
# than silent.
dev-channel = ["aura-os-core/dev-channel", "aura-os-server/dev-channel"]
stable-channel = ["aura-os-core/stable-channel", "aura-os-server/stable-channel"]

[package.metadata.packager]
product-name = "AURA"
identifier = "com.aura.desktop"
category = "DeveloperTool"
icons = [
    # 1024px must use the `@2x` suffix so cargo-packager's icns generator
    # treats it as the 512x512 retina (`ic10`) slot. icns has no entry for
    # `(1024, 1024, density=1)`, so without the suffix `cargo packager` aborts
    # the macOS .app build with `No matching IconType`.
    "assets/icons/icon-1024@2x.png",
    "assets/icons/icon-512.png",
    "assets/icons/icon-256.png",
    "assets/icons/icon-128.png",
    "assets/icons/icon-64.png",
    "assets/icons/icon-32.png",
    "assets/icons/icon-16.png",
]
before-packaging-command = "cargo build --release --no-default-features --features stable-channel --package aura-os-desktop"
resources = ["../../interface/dist", "resources"]

[package.metadata.packager.nsis]
installer-mode = "currentUser"
installer-icon = "assets/installer/installer-icon.ico"
header-image = "assets/installer/header.bmp"
sidebar-image = "assets/installer/sidebar.bmp"

[package.metadata.packager.dmg]
background = "assets/installer/dmg-background.png"

[package.metadata.packager.macos]
minimum-system-version = "10.15"

[lints.clippy]
all = "warn"

[lints.rust]
unsafe_code = "allow"
