[package]
name = "aura-os-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# `default-features = false` because aura-os-core has no default channel
# anymore; the channel is forwarded explicitly via this crate's own
# `dev-channel` / `stable-channel` features below. Pulling in defaults
# here would silently re-activate dev-channel in every workspace build
# (including the release pipeline's stable build).
aura-os-core = { path = "../../crates/aura-os-core", default-features = false }
aura-os-events = { path = "../../crates/aura-os-events" }
aura-os-loops = { path = "../../crates/aura-os-loops" }
aura-os-integrations = { path = "../../crates/aura-os-integrations" }
aura-os-store = { path = "../../crates/aura-os-store" }
aura-os-billing = { path = "../../crates/aura-os-billing" }
aura-os-orgs = { path = "../../crates/aura-os-orgs" }
aura-os-projects = { path = "../../crates/aura-os-projects" }
aura-os-agents = { path = "../../crates/aura-os-agents" }
aura-os-auth = { path = "../../crates/aura-os-auth" }
aura-os-tasks = { path = "../../crates/aura-os-tasks" }
aura-os-sessions = { path = "../../crates/aura-os-sessions" }
aura-os-harness = { path = "../../crates/aura-os-harness" }
aura-os-terminal = { path = "../../crates/aura-os-terminal" }
aura-os-browser = { path = "../../crates/aura-os-browser" }
aura-protocol = { path = "../../crates/aura-protocol" }
aura-os-network = { path = "../../crates/aura-os-network" }
aura-os-storage = { path = "../../crates/aura-os-storage" }
aura-loop-log-schema = { path = "../../crates/aura-loop-log-schema" }
aura-run-heuristics = { path = "../../crates/aura-run-heuristics" }
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { version = "0.5", features = ["util"] }
tower-http = { workspace = true, features = ["compression-br", "compression-gzip", "fs", "set-header"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { workspace = true }
futures-core = "0.3"
futures-util = { workspace = true }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
dashmap = { workspace = true }
dotenvy = "0.15"
hex = { workspace = true }
hostname = "0.4"
local-ip-address = "0.6"
uuid = { workspace = true }
url = { workspace = true }

[features]
default = ["dev-channel"]
# Build-time channel selector. `dev-channel` is the default so plain
# `cargo run -p aura-os-server` produces a Dev binary (dev data dir,
# dev ports, etc.) that can run alongside an installed stable AURA
# without colliding on data dir, ports, or the single-instance lock.
# Stable (published-distribution) builds are produced by the release
# pipeline, which passes `--no-default-features --features stable-channel`
# explicitly. The channel is baked in at compile time, so picking the
# wrong one is loud (different ports, different data dir) rather than
# silent.
#
# All `aura-os-core` deps in this crate (the main `[dependencies]` row
# and the `[dev-dependencies]` row below) carry `default-features =
# false`. Forgetting that is the bug that previously caused the
# published "stable" desktop installer to run as Dev at runtime: Cargo
# feature unification would activate `aura-os-core/dev-channel` via
# this crate even when the desktop was built with
# `--features stable-channel`. See `crates/aura-os-core/src/channel.rs`
# for the full invariant and `scripts/ci/verify-desktop.mjs` for the
# end-to-end guard.
dev-channel = ["aura-os-core/dev-channel"]
stable-channel = ["aura-os-core/stable-channel"]
# Enables the real Chromium/CDP-backed browser backend. Requires a local
# Chromium/Chrome executable at runtime; Chromium is launched lazily on
# the first browser spawn so the server boots even without it.
browser-cdp = ["aura-os-browser/cdp"]

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
reqwest = { workspace = true }
tower = { version = "0.5", features = ["util"] }
uuid = { workspace = true }
aura-os-core = { path = "../../crates/aura-os-core", default-features = false }
aura-os-storage = { path = "../../crates/aura-os-storage", features = ["test-utils"] }
aura-os-harness = { path = "../../crates/aura-os-harness", features = ["test-support"] }

[lints.clippy]
all = "warn"

[lints.rust]
unsafe_code = "allow"
