[package]
name = "aura-os-agents"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aura-os-core = { path = "../aura-os-core", default-features = false }
aura-os-network = { path = "../aura-os-network" }
aura-os-store = { path = "../aura-os-store" }
aura-os-storage = { path = "../aura-os-storage" }
chrono = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
