[package]
name = "aura-os-automation"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Phase G3a: domain types (`Task`, `TaskId`, `TaskStatus`) needed by
# `resilience::orphan` and the per-task retry trackers. We deliberately
# depend on `aura-os-core` directly rather than `aura-os-tasks` so the
# Domain layer doesn't transitively pull in `aura-os-storage` (the
# automation crate is a Domain peer; storage is a higher-level concern
# applied by the App layer at the call site).
aura-os-core = { path = "../aura-os-core", default-features = false }
aura-os-events = { path = "../aura-os-events" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
# The automation crate mirrors a handful of harness wire-event-type
# strings in `event_kinds.rs`. The `event_kinds_match_harness_constants`
# invariant test compares them byte-for-byte against the harness module
# so the duplication stays honest. Production code MUST NOT depend on
# the harness — the Domain layer is below the harness-client crate. See
# Phase G2 / G6 in the dev-loop progress plan for the long-term move.
aura-os-harness = { path = "../aura-os-harness" }
# Test-only: progress tests construct `aura_os_events::LoopActivity`
# fixtures, whose constructors take `chrono::DateTime<Utc>`.
chrono = { workspace = true }

[lints]
workspace = true
