[package]
name = "aura-os-billing"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
test-utils = ["dep:axum", "dep:tempfile"]

[dependencies]
aura-os-core = { path = "../aura-os-core", default-features = false }
aura-os-store = { path = "../aura-os-store" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
