[package]
name = "aura-os-browser"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Headless-browser session + project-aware initial URL resolution for aura-os."

[dependencies]
aura-os-core = { path = "../aura-os-core", default-features = false }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
dashmap = { workspace = true }
once_cell = "1"
regex = "1"
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
chromiumoxide = { version = "0.9", optional = true }

[features]
default = []
# Enables the real Chromium/CDP-backed `CdpBackend` (requires a local
# Chromium/Chrome executable at runtime). The base crate always ships the
# `StubBackend`; downstream crates opt in when they want rendering.
cdp = ["dep:chromiumoxide", "dep:futures-util", "dep:base64"]

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
