[package]
name = "aura-os-core"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
# `dev-channel` is the default so plain `cargo run` / `cargo build`
# produces a Dev binary. Downstream binaries forward this through their
# own pass-through features. Stable (released) binaries are produced
# only by the release pipeline, which passes
# `--no-default-features --features stable-channel` explicitly. See
# `src/channel.rs` for the full mapping (data dir, ports, window title,
# updater enablement, etc.).
default = ["dev-channel"]
stable-channel = []
dev-channel = []
test-utils = ["dep:tempfile"]

[dependencies]
aura-protocol = { path = "../aura-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
