[package]
name = "aura-os-harness"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
# Public `FakeHarness` scaffold for downstream integration tests
# (e.g. the `aura-os-server` Phase 5 concurrent-agents tests). Compiled
# in unconditionally for our own `cargo test` (see the `cfg` gate in
# `lib.rs`); downstream crates opt in by enabling this feature in
# their dev-dependencies entry.
test-support = []

[dependencies]
aura-os-core = { path = "../aura-os-core", default-features = false }
aura-protocol = { path = "../aura-protocol" }
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true