[package]
name = "aura-os-sessions"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aura-os-core = { path = "../aura-os-core", default-features = false }
aura-os-storage = { path = "../aura-os-storage" }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
aura-os-store = { path = "../aura-os-store" }
axum = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
