[package]
name = "aura-os-storage"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
test-utils = ["dep:axum", "dep:uuid", "dep:tokio"]

[dependencies]
aura-os-core = { path = "../aura-os-core", default-features = false }
aura-protocol = { path = "../aura-protocol" }
chrono = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
axum = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
