[package]
name = "aura-os-store"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aura-os-core = { path = "../aura-os-core", default-features = false }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
