[package]
name = "aura-os-tasks"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aura-os-core = { path = "../aura-os-core", default-features = false }
aura-os-storage = { path = "../aura-os-storage" }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
aura-os-store = { path = "../aura-os-store" }
chrono = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
aura-os-storage = { path = "../aura-os-storage", features = ["test-utils"] }
aura-os-billing = { path = "../aura-os-billing", features = ["test-utils"] }

[lints]
workspace = true
